objects/JBCXM__SurveyLogicRules__c.object
<CustomObject>
    <description>This is used to store conditional questions linking</description>
    <fields>
        <fullName>JBCXM__Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store answer from survey allowed answer</description>
        <label>Answer</label>
        <referenceTo>JBCXM__SurveyAllowedAnswers__c</referenceTo>
        <relationshipLabel>SurveyLogicRules</relationshipLabel>
        <relationshipName>SurveyLogicRulesAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Criteria__c</fullName>
        <description>Criteria JSON</description>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DependentQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This used to store the question which should be asked or skipped.</description>
        <label>DependentQuestion</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>SurveyLogicRules (DependentQuestion)</relationshipLabel>
        <relationshipName>SurveyLogicRulesDependentQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__LogicType__c</fullName>
        <label>LogicType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ask</fullName>
                </value>
                <value>
                    <fullName>Skip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__PageInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Page Information Lookup</description>
        <label>PageInfo</label>
        <referenceTo>JBCXM__PageInfo__c</referenceTo>
        <relationshipLabel>SurveyLogicRules</relationshipLabel>
        <relationshipName>SurveyLogicRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store the sub question of  main questiion in logic rules .This is populate for matrix type question</description>
        <label>SubQuestion</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>SurveyLogicRules (SurveySubQuestion)</relationshipLabel>
        <relationshipName>SurveyLogicRulesSubQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyMaster__c</fullName>
        <description>This is used to survey id.</description>
        <label>SurveyMaster</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>SurveyLogicRules</relationshipLabel>
        <relationshipName>SurveyLogicRulesSurvey</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyQuestion__c</fullName>
        <description>This is the question on which rules are applied</description>
        <label>SurveyQuestion</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipLabel>SurveyLogicRulesQuestion</relationshipLabel>
        <relationshipName>SurveyLogicRulesQuestion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SurveyLogicRules</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__SurveyMaster__c</columns>
        <columns>JBCXM__SurveyQuestion__c</columns>
        <columns>JBCXM__SubQuestion__c</columns>
        <columns>JBCXM__LogicType__c</columns>
        <columns>JBCXM__Answer__c</columns>
        <columns>JBCXM__DependentQuestion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>SurveyLogicRules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurveyLogicRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>